# PWChat

./: .gitignore  README.md
PWChat/: .gitignore  CMakeLists.txt
PWChat/client/: CMakeLists.txt
PWChat/client/include/client/: AppManager.h  AudioCodec.h  AudioManager.h  ChatContext.h  NetworkManager.h  OpusCodec.h
PWChat/client/resources/: resources.qrc
PWChat/client/src/: AppManager.cpp  AudioManager.cpp  NetworkManager.cpp  OpusCodec.cpp  main.cpp
PWChat/client/ui/: createroomdialog.ui  loginwindow.ui  mainwindow.ui
PWChat/client/view/: createroomdialog.cpp  createroomdialog.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
PWChat/common/: CMakeLists.txt
PWChat/common/include/common/: AddAdminRequest.h  CreateRoomRequest.h  JoinRoomRequest.h  LeaveRoomRequest.h  LoginRequest.h  MessageData.h  MessageRequest.h  MessageType.h  Packet.h  PacketHeader.h  RegisterRequest.h  RoomData.h  RoomRequest.h  RoomUserData.h  User.h  UserData.h
PWChat/common/src/: Packet.cpp  User.cpp
PWChat/server/: CMakeLists.txt
PWChat/server/include/server/: Command.h  CreateRoomCommand.h  DBConnector.h  JoinRoomCommand.h  LoginCommand.h  PrivateRoom.h  PublicRoom.h  Room.h  RoomData.h  RoomManager.h  SQLiteConnector.h  Server.h  Session.h  UserAudioMessCommand.h
PWChat/server/include/server/Commands/: AddAdminCommand.h  Command.h  JoinRoomCommand.h  LeaveRoomCommand.h  LoadAudioCommand.h  LoadMessagesCommand.h  LogoutCommand.h  RegisterCommand.h  RoomInfoCommand.h  RoomMessCommand.h  RoomTextMessCommand.h  UserMessCommand.h  UserTextMessCommand.h
PWChat/server/src/: CreateRoomCommand.cpp  JoinRoomCommand.cpp  LoginCommand.cpp  PrivateRoom.cpp  PublicRoom.cpp  Room.cpp  RoomManager.cpp  RoomTextMessCommand.cpp  SQLiteConnector.cpp  Server.cpp  Session.cpp  UserAudioMessCommand.cpp  UserTextMessCommand.cpp  main.cpp
PWChat/server/src/Commands/: AddAdminCommand.cpp  CreateRoomCommand.cpp  JoinRoomCommand.cpp  LeaveRoomCommand.cpp  LoadAudioCommand.cpp  LoadMessagesCommand.cpp  LoginCommand.cpp  LogoutCommand.cpp  RegisterCommand.cpp  RoomInfoCommand.cpp  RoomMessCommand.cpp  RoomTextMessCommand.cpp  UserAudioMessCommand.cpp  UserMessCommand.cpp  UserTextMessCommand.cpp
chatServer/: CMakeLists.txt  chatServer_en_VG.ts  main.cpp
